objects/ESC_UpdFieldSetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ESC_CustomerUPD__c</fullName>
        <inlineHelpText>Enter the FieldSet name and the respective Flag name to Update as Comma Seperated values</inlineHelpText>
        <label>Customer Fieldset,UPD Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_FieldsetName__c</fullName>
        <label>Fieldset Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_ObjectName__c</fullName>
        <description>API Name of the object associated to fieldset name</description>
        <label>Object Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_OwnerUPD__c</fullName>
        <inlineHelpText>Enter the FieldSet name and the respective Flag name to Update as Comma Seperated values</inlineHelpText>
        <label>Owner Fieldset,UPD Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_ResloverUPD__c</fullName>
        <inlineHelpText>Enter the FieldSet name and the respective Flag name to Update as Comma Seperated values</inlineHelpText>
        <label>Reslover Fieldset,UPD Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>UpdFieldSetting</label>
</CustomObject>